Revert "Fixed visual bug: close button partially hidden behind vertical scrollbar"
This reverts commit d5fd6cd0a805b57c24b5c07900056a7f0aa91fd8.

--- a/var_masterpiece_extension/css/var_dump.scss
+++ b/var_masterpiece_extension/css/var_dump.scss
@@ -16,6 +16,7 @@
   #var_dump { //the var dump output
     font-size: 16px;
     white-space: pre-wrap;
+    margin-top: 40px; //40px is header height
     padding-top: 5%;
     padding-bottom: 5%;
     padding-right: 5%;
@@ -143,10 +144,10 @@
     }
 
     #header {
-      position: sticky;
+      position: fixed;
       z-index: 1;
       box-sizing: border-box;
-      width: 100%;
+      width: 80%;
       background-color: #BC2D09;
       padding: 10px;
       height: 40px;
